--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/conf.css">
     <script language="JavaScript">
         function mail() {
-            var username = "beap20";
+            var username = "prisem20";
             var hostname = "easychair.org";
             var linktext = username + "@" + hostname;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
