--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
     <div class="row">
         <div class="large-4 columns">
             <a class="twitter-timeline" data-lang="en" data-link-color="#FAB81E" data-height="1000"
-                href="https://twitter.com/beap_ws">Tweets by BEAP_WS</a>
+                href="https://twitter.com/PriSEM_WS">Tweets by PriSEM_WS</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="large-8 columns">
