--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/conf.css">
     <script language="JavaScript">
         function mail() {
-            var username = "prisem20";
-            var hostname = "easychair.org";
+            var username = "nicolas.herbaut";
+            var hostname = "univ-paris1.fr";
             var linktext = username + "@" + hostname;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
         }
