say thanks to AIRE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 
     <div class="row">
         <div class="large-4 columns">
-            <a class="twitter-timeline" data-lang="en" data-link-color="#FAB81E" data-height="1000"
+            <a class="twitter-timeline" target="_blank" data-lang="en" data-link-color="#FAB81E" data-height="1000"
                 href="https://twitter.com/PriSEM_WS">Tweets by PriSEM_WS</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
@@ -74,7 +74,7 @@
     </div>
     <hr>
     <footer>
-        &copy; 2020 {{site.name}}. All rights reserved.
+        &copy; 2020 {{site.name}}. All rights reserved. This website is a fork of the <a href="https://aire-ws.github.io/aire20/" target="_blank">AIRE</a> workshop website
     </footer>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
