--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
     </div>
     <hr>
     <footer>
-        &copy; 2020 {{site.name}}. All rights reserved. This website is a fork of the <a href="https://aire-ws.github.io/aire20/" target="_blank">AIRE</a> workshop website
+        &copy; 2020 {{site.name}}. All rights reserved. This website is a fork of the <a href="https://aire-ws.github.io/aire20/" target="_blank">AIRE</a> workshop website.
     </footer>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
