print style easychair link fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/conf.css">
     <script language="JavaScript">
         function mail() {
-            var username = "nicolas.herbaut";
-            var hostname = "univ-paris1.fr";
+            var username = "prisem20";
+            var hostname = "easychair.org";
             var linktext = username + "@" + hostname;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
         }
@@ -54,7 +54,7 @@
 
 
     <div class="row">
-        <div class="large-4 columns">
+        <div class="large-4 columns" id="twitter-feed">
             <a class="twitter-timeline" target="_blank" data-lang="en" data-link-color="#FAB81E" data-height="1000"
                 href="https://twitter.com/PriSEM_WS">Tweets by PriSEM_WS</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
