--- a/css/conf.css
+++ b/css/conf.css
@@ -2,6 +2,7 @@
 	.print-only{
 		display:none !important;
 	}
+
 }
 
 @media print{
@@ -10,6 +11,10 @@
 	}
 	nav{
 		display:none !important;
+	}
+
+	.no-print{
+		display:none;
 	}
 }
 
