--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/conf.css">
     <script language="JavaScript">
         function mail() {
-            var username = "prisem20";
+            var username = "prisem21";
             var hostname = "easychair.org";
             var linktext = username + "@" + hostname;
             document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
@@ -55,8 +55,7 @@
 
     <div class="row">
         <div class="large-4 columns" id="twitter-feed">
-            <a class="twitter-timeline" target="_blank" data-lang="en" data-link-color="#FAB81E" data-height="1000"
-                href="https://twitter.com/PriSEM_WS">Tweets by PriSEM_WS</a>
+            <a class="twitter-timeline" target="_blank" data-lang="en" data-link-color="#FAB81E" data-height="1000" href="https://twitter.com/PriSEM_WS">Tweets by PriSEM_WS</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="large-8 columns">
@@ -67,14 +66,16 @@
 
             <h3>Contact</h3>
             If you have any questions about {{site.title}} please contact us via
-            <script type="text/javascript">mail();</script>
+            <script type="text/javascript">
+                mail();
+            </script>
             </p>
 
         </div>
     </div>
     <hr>
     <footer>
-        &copy; 2020 {{site.name}}. All rights reserved. 
+        &copy; 2021 {{site.name}}. All rights reserved.
     </footer>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
